test/error/unary_invalid.ss
var g = "hello";
var h = -g;
# -> type error
